--- a/.travis.yml
+++ b/.travis.yml
@@ -18,14 +18,14 @@ install:
 # Once containers are up, print them out for logging purposes.
 before_script:
   - "pylint src/*.py"
-  - "pytest src/test_unit.py"
+  - "pytest --verbose src/test_unit.py"
   - "docker-compose build"
   - "docker-compose up -d"
   - "docker ps"
 
 # Run the integration tests to ensure the web server is functional.
 script:
-  - "pytest src/test_integration.py"
+  - "pytest --verbose src/test_integration.py"
 
 # Not completely necessary, but gracefully tear down containers.
 after_script:
