--- a/.pylintrc
+++ b/.pylintrc
@@ -143,8 +143,8 @@ disable=print-statement,
         bare-except,
         exec-used,
         no-member,
-        redefined-outer-name
-
+        redefined-outer-name,
+        unnecessary-pass
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
